# airdatable

./: Cargo.toml  LICENSE.md  README.md
src/: airtable.rs  lib.rs  sync.rs
src/airtable/: client.rs
tests/: get_notes.rs
tests/common/: mod.rs
