[package]
name = "airdatable"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
governor = "0.10.4"
itertools = { version = "0.14.0", optional = true }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["sync"]
sync = ["dep:itertools"]
