[package]
name = "airdatable"
version = "0.1.0"
edition = "2024"

[features]
default = ["sync"]
sync = ["dep:itertools"]

[dependencies]
anyhow = "1.0.102"
bon = "3.9.1"
governor = "0.10.4"
itertools = { version = "0.14.0", optional = true }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
